--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,28 @@
 <div class="root">
-    <p>Gebruikers applicatie</p>
+    <p>Users:</p>
     <hr />
 
     <app-user *ngFor="let user of users" [user]="user" (deleted)="deleteUser($event)"></app-user>
 
     <hr/>
     <input [(ngModel)]="newName"/>
-    <button (click)="addUser()">Voeg een gebruiker toe</button>
+    <button (click)="addUser()">Add a user</button>
 </div>
+
+<div>
+    <p>
+        Notes for
+        <select ng-model="selectedName" ng-options="x for x in users">
+        </select>           
+    </p>
+    <hr />
+
+    <app-note *ngFor="let note of notes" [note]="note" (deleted)="deleteNote($event)"></app-note>
+
+    <hr/>
+    <input [(ngModel)]="newNote"/>
+    <button (click)="addNote()">Add a note</button>
+</div>
+
 
 
